--- a/Ejer4_Radar/pom.xml
+++ b/Ejer4_Radar/pom.xml
@@ -20,6 +20,7 @@
             <groupId>org.eclipse.paho</groupId>
             <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
             <version>1.1.1</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
